fix chat message item padding

--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -19,6 +19,10 @@
     <RelativeLayout
         android:id="@+id/content_container"
         android:layout_width="wrap_content"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_5"
         android:layout_toEndOf="@+id/profileImage"
