--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -52,6 +52,8 @@
         android:id="@+id/text_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:breakStrategy="high_quality"
+        tools:targetApi="m"
         android:layout_below="@id/authorImage"
         android:layout_toEndOf="@id/image"
         android:ellipsize="end"
