--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -34,9 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="@dimen/standard_button_height"
-        android:layout_marginTop="72dp"
-        tools:layout_marginTop="0dp">
+        android:layout_marginBottom="@dimen/standard_button_height">
 
         <!-- Chat heads recycler view -->
         <android.support.v7.widget.RecyclerView
@@ -418,7 +416,7 @@
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="false"
-        tools:layout_height="match_parent">
+        tools:layout_height="0dp">
 
         <ImageView
             android:id="@+id/loginBackgroundImage"
