--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -16,13 +16,12 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_marginTop="-48dp">
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/topImage"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
+                android:layout_height="152dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +32,7 @@
                 style="@style/semiBoldText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:shadowColor="@color/black_transparent_154"
                 android:shadowDx="1"
