--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -58,10 +58,12 @@
                     android:layout_marginTop="2dp"
                     android:layout_toEndOf="@+id/logoImageView"
                     android:layout_toStartOf="@+id/notificationsButton"
+                    android:text="Sporting CP"
                     android:textAllCaps="true"
                     android:textColor="?phoneLoungeTeamCaptionColor"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    tools:ignore="HardcodedText" />
 
                 <TextSwitcher
                     android:id="@+id/scrollingNewsSwitcher"
@@ -69,6 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="@dimen/half_margin"
+                    android:layout_marginTop="-2dp"
                     android:layout_toEndOf="@+id/logoImageView"
                     android:layout_toStartOf="@+id/notificationsButton"
                     android:animateLayoutChanges="true"
@@ -82,8 +85,10 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
+                        android:text="Loading..."
                         android:textColor="?phoneLoungeTickerColor"
-                        android:textSize="@dimen/font_size_10" />
+                        android:textSize="@dimen/font_size_10"
+                        tools:text="Champions League: B. Dortmund, ..." />
 
                 </TextSwitcher>
 
