--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -19,10 +19,7 @@
     <RelativeLayout
         android:id="@+id/content_container"
         android:layout_width="wrap_content"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:padding="6dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_5"
         android:layout_toEndOf="@+id/profileImage"
@@ -31,6 +28,8 @@
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="@dimen/font_size_11" />
