--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -28,6 +28,7 @@
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
+            android:lineSpacingMultiplier="0.9"
             android:layout_marginEnd="4dp"
             android:layout_marginStart="4dp"
             android:layout_height="wrap_content"
