--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
+            android:lineSpacingMultiplier="0.9"
             android:layout_marginStart="4dp"
             tools:text="Demo content."
             android:textColor="#313230" />
