--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -234,43 +234,43 @@
                             android:textColorHint="#a1ffffff" />
 
                     </android.support.design.widget.TextInputLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/bottom_buttons_container_sign_up"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/standard_button_height"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="@dimen/margin_30"
+                        android:background="@drawable/button_login_login">
+
+                        <TextView
+                            android:id="@+id/sign_up_text"
+                            fontPath="fonts/TitilliumWeb-SemiBold.ttf"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="@string/join"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/font_size_18" />
+
+                        <ProgressBar
+                            android:id="@+id/sign_up_progress_bar"
+                            android:layout_width="@dimen/prodgres_bar"
+                            android:layout_height="@dimen/prodgres_bar"
+                            android:layout_centerInParent="true"
+                            android:elevation="@dimen/elevation_2"
+                            android:theme="@style/AppTheme.WhiteAccent"
+                            android:visibility="gone" />
+
+                    </RelativeLayout>
                 </LinearLayout>
             </ScrollView>
         </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/bottom_buttons_container_sign_up"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_above="@id/politic_and_privacy_android"
-            android:layout_marginEnd="@dimen/margin_30"
-            android:layout_marginStart="@dimen/margin_30"
-            android:background="@drawable/button_login_login">
-
-            <TextView
-                android:id="@+id/sign_up_text"
-                fontPath="fonts/TitilliumWeb-SemiBold.ttf"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/join"
-                android:textColor="@color/black_alpha_70"
-                android:textSize="@dimen/font_size_18" />
-
-            <ProgressBar
-                android:id="@+id/sign_up_progress_bar"
-                android:layout_width="@dimen/prodgres_bar"
-                android:layout_height="@dimen/prodgres_bar"
-                android:layout_centerInParent="true"
-                android:elevation="@dimen/elevation_2"
-                android:theme="@style/AppTheme.BlackAccent"
-                android:visibility="gone" />
-
-        </RelativeLayout>
-
         <TextView
             android:id="@+id/politic_and_privacy_android"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/margin_20"
