--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -242,6 +242,19 @@
                                 tools:text="0" />
                         </LinearLayout>
 
+                        <View
+                            android:layout_height="match_parent"
+                            android:background="?white"
+                            android:layout_width="1dp"/>
+
+                        <ImageView
+                            android:layout_width="32dp"
+                            android:scaleType="fitCenter"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginEnd="8dp"
+                            android:layout_height="32dp"
+                            android:src="@drawable/logo_fc"/>
+
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
