hide caps section on the profile screen

--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -530,6 +530,7 @@
             <RelativeLayout
                 android:id="@+id/holder_progress_bar"
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/info_container">
 
@@ -649,6 +650,7 @@
                 android:layout_height="match_parent"
                 android:layout_below="@id/holder_progress_bar"
                 android:layout_marginBottom="@dimen/margin_10"
+                tools:paddingStart="16dp"
                 android:layout_marginTop="@dimen/margin_10"
                 android:nestedScrollingEnabled="false" />
 
