localize tickets label

--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -178,7 +178,7 @@
                         android:textSize="12sp"
                         android:layout_margin="8dp"
                         android:background="@drawable/button_tickets"
-                        android:text="Get Tickets"
+                        android:text="@string/tickets"
                         android:textAllCaps="false"
                         android:textColor="@color/white" />
 
