--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -13,10 +13,10 @@
     <RelativeLayout
         android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/phone_background"
+        android:background="@color/colorPrimary"
         android:orientation="horizontal"
         android:tileMode="repeat"
         tools:layout_height="56dp">
@@ -41,7 +41,7 @@
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentBottom="true"
-            android:alpha="0.25"
+            android:alpha="0.75"
             android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />
     </RelativeLayout>
 
@@ -72,12 +72,12 @@
             android:id="@+id/clickOutsideContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:alpha="0.5"
-            android:background="@drawable/phone_background"
+            android:foreground="#99000000"
+            android:orientation="horizontal"
+            android:scaleType="centerCrop"
             android:clickable="true"
             android:focusable="false"
-            android:orientation="horizontal"
-            android:tileMode="repeat" />
+            tools:src="@drawable/background_sporting" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -134,7 +134,7 @@
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="1"
-                            android:alpha="0.15"
+                            android:alpha="0.5"
                             android:background="?popupsCaptionColor" />
 
                         <TextView
@@ -143,7 +143,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:alpha="0.5"
                             android:gravity="center"
                             android:text="@string/or"
                             android:textAllCaps="true"
@@ -153,7 +152,7 @@
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="1"
-                            android:alpha="0.15"
+                            android:alpha="0.5"
                             android:background="?popupsCaptionColor" />
 
                         <View
@@ -171,7 +170,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/first_name"
                         android:inputType="textCapWords"
-                        android:textColorHint="#a1ffffff" />
+                        android:textColorHint="#cbffffff" />
 
                     <EditText
                         android:id="@+id/sign_up_lastname"
@@ -181,7 +180,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/last_name"
                         android:inputType="textCapWords"
-                        android:textColorHint="#a1ffffff" />
+                        android:textColorHint="#cbffffff" />
 
                     <EditText
                         android:id="@+id/sign_up_display_name"
@@ -191,7 +190,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/nickname"
                         android:inputType="text"
-                        android:textColorHint="#a1ffffff" />
+                        android:textColorHint="#cbffffff" />
 
                     <EditText
                         android:id="@+id/sign_up_email"
@@ -201,7 +200,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/email"
                         android:inputType="text"
-                        android:textColorHint="#a1ffffff" />
+                        android:textColorHint="#cbffffff" />
 
                     <EditText
                         android:id="@+id/sign_up_phone"
@@ -211,7 +210,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/phone"
                         android:inputType="phone"
-                        android:textColorHint="#a1ffffff" />
+                        android:textColorHint="#cbffffff" />
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/passwordInputLayout"
@@ -231,7 +230,7 @@
                             android:drawablePadding="-48dp"
                             android:hint="@string/password"
                             android:inputType="textPassword"
-                            android:textColorHint="#a1ffffff" />
+                            android:textColorHint="#cbffffff" />
 
                     </android.support.design.widget.TextInputLayout>
 
