--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -370,6 +370,7 @@
     </FrameLayout>
 
     <ImageView
+        android:id="@+id/logoImageView"
         android:layout_width="52dp"
         android:layout_height="52dp"
         android:layout_alignParentBottom="true"
