--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -118,6 +118,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
+                        android:id="@+id/orContainer"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/margin_10"
                         android:layout_marginTop="16dp"
@@ -327,6 +328,7 @@
     </FrameLayout>
 
     <ImageView
+        android:id="@+id/logoImageView"
         android:layout_width="52dp"
         android:layout_height="52dp"
         android:layout_alignParentBottom="true"
