--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -228,6 +228,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="0dp"
+                            android:imeOptions="actionSend"
                             android:drawablePadding="-48dp"
                             android:hint="@string/password"
                             android:inputType="textPassword"
