--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/fragmentHolder"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@id/bottomNavigationRecyclerView"
+                android:layout_above="@id/shadowBottomBar"
                 android:layout_below="@id/leftTopBarContainer" />
 
             <RelativeLayout
@@ -138,7 +138,7 @@
                 android:layout_marginTop="24dp" />
 
             <View
-                android:id="@+id/shadow"
+                android:id="@+id/shadowBottomBar"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/height_2"
                 android:layout_above="@id/bottomNavigationRecyclerView"
