--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -53,7 +53,7 @@
             android:layout_height="@dimen/margin_20"
             android:layout_below="@id/chat_heads_view"
             android:background="?white"
-            android:ellipsize="marquee"
+            android:ellipsize="end"
             android:gravity="center"
             android:lines="1"
             android:paddingEnd="@dimen/margin_60"
