show more post text after click on it

--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -305,6 +305,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/title"
                     android:layout_marginEnd="@dimen/margin_15"
+                    android:background="?selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="false"
                     android:layout_marginStart="@dimen/margin_15"
                     android:animateLayoutChanges="true"
                     android:autoLink="all"
